@@ -20,16 +20,11 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
-    - name: Checkout Pygments
-      uses: actions/checkout@v3
-    - name: Install Sphinx & WCAG contrast ratio
-      run: pip install Sphinx wcag-contrast-ratio
-    - name: Create Pyodide WASM package
-      run: cd doc && make pyodide
+    - name: Install tox
+      run: pip install tox
     - name: Sphinx build
       run: |
-        cd doc
-        WEBSITE_BUILD=1 make dirhtml
+        tox -e web-doc -- -b dirhtml
         touch _build/dirhtml/.nojekyll
         echo -e 'pygments.org\nwww.pygments.org' > _build/dirhtml/CNAME
         echo 'Automated deployment of docs for GitHub pages.' > _build/dirhtml/README
