@@ -1,7 +1,2 @@
-pytest-cov
-pytest-randomly
-pytest>=7.0
-pyflakes
-pylint
-tox
-wcag-contrast-ratio
+tox >= 4.4
+# Other requirements are installed by tox.
