@@ -40,7 +40,7 @@ def main():
         lines.sort()
         new_dict = '\n'.join(lines)
         content = f'''# Automatically generated by scripts/gen_mapfiles.py.
-# DO NOT EDIT BY HAND; run `make mapfiles` instead.
+# DO NOT EDIT BY HAND; run `tox -e mapfiles` instead.
 
 {key.upper()} = {{
 {new_dict}
