@@ -22,6 +22,10 @@ Version 2.15.0
 - Fix some places where a locale-dependent encoding could unintentionally
   be used instead of UTF-8 (#2326).
 
+- The top-level ``Makefile`` has been removed. Instead, all shortcuts
+  for developing are now defined and run through tox.  The ``doc`` folder
+  still contains a ``Makefile`` as an alternative to ``tox -e doc``.
+
 Version 2.14.0
 --------------
 (released January 1st, 2023)
